--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,6 +10,13 @@ body {
   min-height: 100vh;
 }
 
+.no-seleccionable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 h1 {
   font-family: 'Orbitron', sans-serif;
   font-size: 40px;
